Added Basic CSS

--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Arpit Singh Info Page</title>
+  <title>Arpit Singh</title>
+  <link rel="stylesheet" href=" css/styles.css">
+  <link rel="icon" href="Favicon/index-favicon.ico">
 </head>
 
 <body>
-  <table cellspacing='10'>
+  <table cellspacing='20'>
     <tr>
       <td>
         <img src="Images/Profileimg.png" alt="Arpit Profile Photo" width="125" height="125" />
       </td>
 
       <td>
-        <h1>Arpit Singh</h1>
+        <h1> Arpit Singh</h1>
         <p><em> Software Engineer, <strong>MakeMyTrip</strong> </em>
         </p>
 
@@ -26,7 +28,7 @@
     I have recently joined GOMMT as a Software Engineer and completed my B.Tech from <a href="http://www.nits.ac.in">NIT Silchar</a> in Computer Science & Engineering<a href="http://cs.nits.ac.in/css-home/">(CSE)</a> and currently learning new technologies. I am a Tea Lover.
   </p>
 
-  <hr size="4" />
+  <hr />
 
   <h3>Education</h3>
 
@@ -40,12 +42,12 @@
   <h3>Work Experience</h3>
   <table cellspacing = "5">
     <tr>
-      <td>June 2021 - current</td>
+      <td class="date">June 2021 - current</td>
       <td>Software Engineer, MakeMyTrip</td>
     </tr>
 
     <tr>
-      <td>May 2019 - June 2019</td>
+      <td class="date">May 2019 - June 2019</td>
       <td>Summer Research Intern, IIT Patna</td>
     </tr>
   </table>
