--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
+  <link rel="stylesheet" href=" css/styles.css">
+  <link rel="icon" href="Favicon/hobbies-favicon.ico">
 </head>
 
 <body>
