--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Arpit Singh</title>
-  <link rel="stylesheet" href=" /css/styles.css">
+  <link rel="stylesheet" href=" /arpitnits/css/styles.css">
   <link rel="icon" href="Favicon/index-favicon.ico">
 </head>
 
