--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Arpit Singh</title>
-  <link rel="stylesheet" type ="text/css" href="/Resume/CSS/styles.css">
+  <link rel="stylesheet" type ="text/css" href="https://github.com/arpitnits/Resume/blob/main/CSS/styles.css">
   <link rel="icon" href="Favicon/index-favicon.ico">
 </head>
 
