--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+   <link rel="stylesheet" type ="text/css" href="https://github.com/arpitnits/Resume/blob/main/CSS/styles.css">
   <link rel="icon" href="Favicon/hobbies-favicon.ico">
 </head>
 
